cloudreve/service.yaml
## service for cloudreve
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cloudreve
  name: cloudreve            # 这个名称，在ingress 上面会用到
  namespace: cloudreve       # 命名空间
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
    - IPv6
  ipFamilyPolicy: PreferDualStack  # 这个类型是支持 ipv4和ipv6入口。上面ipFamilies 也对应加了Ipv6
  # 这里targetPort 也可以填80，这里的http是 deploment里面的 ports 里面定义的name，因此可以这样写
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  ## 这里填的值，需要和deploment服务的 template.labels.app对应上，否则网络不通
  selector:
    app: cloudreve
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 600
  type: ClusterIP


### service for redis
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cloudreve-redis
  name: cloudreve-redis 
  namespace: cloudreve
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  # 这个类型 仅支持Ipv4方式
  ipFamilyPolicy: SingleStack
  # 这里targetPort也可以填6379，这里的redis是 deploment里面的 ports 里面定义的name，因此可以这样写
  ports:
    - name: http
      port: 6379
      protocol: TCP
      targetPort: redis
  ## 这里填的值，需要和deploment服务的 template.labels.app对应上，否则网络不通
  selector:
    app: cloudreve-redis
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 600
  type: ClusterIP
